@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- add GAP, POSITION and CAPS/JOINS to mapfile writer (#3797)
+
 - fix GEOMTRANSFORM rotation orientation for vector symbols (#3802)
 
 - GD Driver broken in FastCGI (#3813)
